--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   syncfusion_flutter_pdfviewer: ^23.1.38
-
+  http: ^1.1.0
+  url_launcher: ^6.1.14
+  syncfusion_flutter_pdf: ^23.1.38
+  path_provider: ^2.1.1
+  dio: ^5.3.3
+  flutter_downloader: ^1.11.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
